--- a/2.ipynb
+++ b/2.ipynb
@@ -205,6 +205,8 @@
       "source": [
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
+        "import statsmodels.api as sm\n",
+        "import statsmodels.formula.api as smf\n",
         "\n",
         "# Set seaborn style\n",
         "sns.set(style=\"whitegrid\")\n",
