--- a/2.ipynb
+++ b/2.ipynb
@@ -395,7 +395,7 @@
         ")\n",
         "result = model.fit()\n",
         "\n",
-        "# Summary of model\n",
+        "# showing Summary of model\n",
         "print(result.summary())"
       ],
       "metadata": {
