--- a/2.ipynb
+++ b/2.ipynb
@@ -54,7 +54,7 @@
         "data_path = \"/content/drive/MyDrive/INVALSI_data_MAT_2324(Foglio 1).csv\"\n",
         "df = pd.read_csv(data_path)\n",
         "\n",
-        "# 4. Define relevant columns\n",
+        "# 4. Define all relevant columns\n",
         "selected_columns = [\n",
         "    \"gender\", \"month\", \"year\", \"origin\", \"nursery_attendance\", \"kindergarten_attendance\",\n",
         "    \"father_education\", \"mother_education\", \"father_occupation\", \"mother_occupation\",\n",
@@ -395,7 +395,7 @@
         ")\n",
         "result = model.fit()\n",
         "\n",
-        "# showing Summary of model\n",
+        "# Summary\n",
         "print(result.summary())"
       ],
       "metadata": {
