--- a/2.ipynb
+++ b/2.ipynb
@@ -54,7 +54,7 @@
         "data_path = \"/content/drive/MyDrive/INVALSI_data_MAT_2324(Foglio 1).csv\"\n",
         "df = pd.read_csv(data_path)\n",
         "\n",
-        "# 4. Define all relevant columns\n",
+        "# 4. Define relevant columns\n",
         "selected_columns = [\n",
         "    \"gender\", \"month\", \"year\", \"origin\", \"nursery_attendance\", \"kindergarten_attendance\",\n",
         "    \"father_education\", \"mother_education\", \"father_occupation\", \"mother_occupation\",\n",
@@ -93,7 +93,7 @@
         "print(\"\\nRemaining missing values:\\n\")\n",
         "print(df_clean.isnull().sum())\n",
         "\n",
-        "# 8. Visualize missing data\n",
+        "# 8. Visualizing missing data\n",
         "import seaborn as sns\n",
         "plt.figure(figsize=(12,6))\n",
         "msno.heatmap(df_clean)\n",
