--- a/2.ipynb
+++ b/2.ipynb
@@ -93,7 +93,7 @@
         "print(\"\\nRemaining missing values:\\n\")\n",
         "print(df_clean.isnull().sum())\n",
         "\n",
-        "# 8. Visualizing missing data\n",
+        "# 8. Visualize missing data\n",
         "import seaborn as sns\n",
         "plt.figure(figsize=(12,6))\n",
         "msno.heatmap(df_clean)\n",
@@ -395,7 +395,7 @@
         ")\n",
         "result = model.fit()\n",
         "\n",
-        "# Summary\n",
+        "# Summary of model\n",
         "print(result.summary())"
       ],
       "metadata": {
@@ -944,7 +944,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Variance explained by region\n",
+        "# Variance explained by regions\n",
         "var_components = result.cov_re\n",
         "print(\"\\nRandom Effect Variance (Region):\")\n",
         "print(var_components)\n",
