--- a/2.ipynb
+++ b/2.ipynb
@@ -317,6 +317,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#plotting boxplots\n",
         "# C. Grouped Boxplot - e.g., WLE_MATH_200 by Gender\n",
         "if \"WLE_MATH_200\" in df_clean.columns and \"gender\" in df_clean.columns:\n",
         "    plt.figure()\n",
