--- a/2.ipynb
+++ b/2.ipynb
@@ -216,7 +216,7 @@
         "    \"WLE_MATH_200\", \"math_score_raw\", \"math_score_percentile\"\n",
         "]\n",
         "\n",
-        "# Categorical columns\n",
+        "# Categorical columns names\n",
         "categorical_columns = [\n",
         "    \"gender\", \"month\", \"year\", \"origin\", \"nursery_attendance\", \"kindergarten_attendance\",\n",
         "    \"father_education\", \"mother_education\", \"father_occupation\", \"mother_occupation\",\n",
