--- a/2.ipynb
+++ b/2.ipynb
@@ -216,7 +216,7 @@
         "    \"WLE_MATH_200\", \"math_score_raw\", \"math_score_percentile\"\n",
         "]\n",
         "\n",
-        "# Categorical columns names\n",
+        "# Categorical columns\n",
         "categorical_columns = [\n",
         "    \"gender\", \"month\", \"year\", \"origin\", \"nursery_attendance\", \"kindergarten_attendance\",\n",
         "    \"father_education\", \"mother_education\", \"father_occupation\", \"mother_occupation\",\n",
@@ -317,7 +317,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#plotting boxplots\n",
         "# C. Grouped Boxplot - e.g., WLE_MATH_200 by Gender\n",
         "if \"WLE_MATH_200\" in df_clean.columns and \"gender\" in df_clean.columns:\n",
         "    plt.figure()\n",
@@ -379,6 +378,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#import necessary libraries\n",
         "import statsmodels.api as sm\n",
         "import statsmodels.formula.api as smf\n",
         "\n",
@@ -396,7 +396,7 @@
         ")\n",
         "result = model.fit()\n",
         "\n",
-        "# Summary of model\n",
+        "# Summary\n",
         "print(result.summary())"
       ],
       "metadata": {
@@ -945,7 +945,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Variance explained by regions\n",
+        "# Variance explained by region\n",
         "var_components = result.cov_re\n",
         "print(\"\\nRandom Effect Variance (Region):\")\n",
         "print(var_components)\n",
