--- a/2.ipynb
+++ b/2.ipynb
@@ -203,6 +203,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#EDA part\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -382,13 +383,13 @@
         "import statsmodels.api as sm\n",
         "import statsmodels.formula.api as smf\n",
         "\n",
-        "# Convert categorical variables to category dtype\n",
+        "# Converting categorical variables to category dtype\n",
         "df_clean[\"Region_Code\"] = df_clean[\"Region_Code\"].astype(\"category\")\n",
         "df_clean[\"gender\"] = df_clean[\"gender\"].astype(\"category\")\n",
         "df_clean[\"origin\"] = df_clean[\"origin\"].astype(\"category\")\n",
         "df_clean[\"GeoArea_5\"] = df_clean[\"GeoArea_5\"].astype(\"category\")\n",
         "\n",
-        "# Fit multilevel linear model with random intercepts by Region_Code\n",
+        "# Fitting multilevel linear model with random intercepts by Region_Code\n",
         "model = smf.mixedlm(\n",
         "    \"WLE_MATH_200 ~ gender + origin + ESCS_student + father_education + mother_education + father_occupation + mother_occupation + nursery_attendance + kindergarten_attendance\",\n",
         "    df_clean,\n",
