--- a/homework1_3.ipynb
+++ b/homework1_3.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -355,7 +355,7 @@
         "id": "sOxcbaPaxb5M",
         "outputId": "4851d298-8fb9-4c9a-af15-93c9948390cf"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -674,7 +674,7 @@
         "id": "N-P-iHspyAz0",
         "outputId": "de3a29f4-bfee-4b2f-d6d0-7e7d658fb36a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -703,7 +703,7 @@
         "id": "bV3jS3lLyG0y",
         "outputId": "23776d80-e86f-4c1f-bc9f-c771df6c9730"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1024,7 +1024,7 @@
         "id": "xheOKRwdyvdC",
         "outputId": "b46239d8-49f2-4c19-c597-a469c8306601"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1363,7 +1363,7 @@
         "id": "b03Xhm_WDiGp",
         "outputId": "3e02a181-33cd-4d46-c152-87171d1f347b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1424,7 +1424,7 @@
         "id": "TBZHAmRRvcKD",
         "outputId": "ac68f498-0a50-452d-d8a6-df2dc452fae2"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1457,7 +1457,7 @@
         "id": "Y6FE8j8QxNRL",
         "outputId": "13904e24-71fd-4580-bb74-d6617294b698"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1484,7 +1484,7 @@
         "id": "4SyFsdVzWRSx",
         "outputId": "2c7d8992-2ff4-410f-f79a-52397eac3937"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1511,6 +1511,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#EDA\n",
         "# Histogram for Ghq12\n",
         "plt.figure(figsize=(11,4))\n",
         "sns.histplot(new_df['Ghq12'], kde=True, bins=20, color='yellow')\n",
@@ -1535,7 +1536,7 @@
         "id": "YX8X6FN7Xnso",
         "outputId": "5ee469fd-49ac-4b40-bd2d-9005b9f9f06b"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1584,7 +1585,7 @@
         "id": "Do_P8C7ZYReM",
         "outputId": "8b8f70dd-376e-4f72-9ec9-acd737732adb"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1635,7 +1636,7 @@
         "id": "2koNQCcIbIgh",
         "outputId": "02ec7d22-2a06-4928-85b7-dac0436cda08"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1699,7 +1700,7 @@
         "id": "sPKj3uWkbvL0",
         "outputId": "efa12ed5-1cf5-4177-b033-7c1e37ce6583"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1726,7 +1727,7 @@
         "id": "htIsnfqucE9X",
         "outputId": "b3178188-6f08-470b-918c-c43094fd8b05"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1776,7 +1777,7 @@
         "id": "SoKdGKQ0wJ_C",
         "outputId": "5712bfb9-5dc4-4345-faa6-7f736bd34750"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1812,7 +1813,7 @@
         "id": "ktfb5W8nlL0X",
         "outputId": "4087024d-c08c-4485-a265-267261b11eb1"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2125,7 +2126,7 @@
         "id": "G65210_UlLue",
         "outputId": "156c29eb-2512-4836-ca15-dd91f8d30960"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2157,7 +2158,7 @@
         "id": "N_C-J3w2pGrP",
         "outputId": "bb0b528f-8373-4652-c73e-2c7270cb5a57"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2189,7 +2190,7 @@
         "id": "_jv7I0o4hoLI",
         "outputId": "6412e8f5-c0ac-4d27-913f-5d0f9d705956"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2216,7 +2217,7 @@
         "id": "vXxhxTLoywll",
         "outputId": "fda09211-a854-4ab3-a48d-a6fffd4d124e"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2292,7 +2293,7 @@
         "id": "RWe12Rhm7cNM",
         "outputId": "3e354afd-b381-4a04-f1e8-6c0dc3287753"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2339,7 +2340,7 @@
         "id": "so3yphZM73h-",
         "outputId": "262245db-4997-439e-a98d-4b1d563de68a"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2373,7 +2374,7 @@
         "id": "U7q5ZCqk-qES",
         "outputId": "2b6cd0d0-adc6-4c44-a1b1-2f89d0178098"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2407,7 +2408,7 @@
         "id": "R4B739xK_e13",
         "outputId": "68fa850d-95e3-423c-9ef6-3604527c726d"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2442,7 +2443,7 @@
         "id": "84NhCBFaAKOh",
         "outputId": "2dfda309-b5fd-42da-aea8-56393e6d9e14"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2472,7 +2473,7 @@
         "id": "vxKVyGeHA903",
         "outputId": "c9960c86-1f49-480b-a4c0-e8a8228552c9"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2517,7 +2518,7 @@
         "id": "iIBlfiaiEMEe",
         "outputId": "84395707-6a3d-4b28-8919-b4eabc9b7801"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2565,7 +2566,7 @@
         "id": "RaisY7o4FIDD",
         "outputId": "076fd0ef-df48-45ff-a1c8-e7540e6073fe"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2622,7 +2623,7 @@
         "id": "_t23hbTcHj0w",
         "outputId": "6f09b633-1630-4917-987e-bbe54bc6443c"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2675,7 +2676,7 @@
         "id": "VnhevQF8VKO9",
         "outputId": "68aac67c-9f0d-4838-e2a9-d40bd991cfa8"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2730,7 +2731,7 @@
         "id": "txWtSrsQZpuc",
         "outputId": "9bbd8002-2570-4fdc-f4c2-11868002f538"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2780,7 +2781,7 @@
         "id": "ugPVtRQTbB7c",
         "outputId": "f9a2fd0d-4948-4e11-c770-bc70a87ff91e"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2822,7 +2823,7 @@
         "id": "ObpGTjVBdEg0",
         "outputId": "925693ca-9d03-4bc7-f055-9e491526ba8c"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2848,7 +2849,7 @@
         "id": "0x5cNDr4I3Xq",
         "outputId": "52b5874d-aafb-44b7-808f-e5dc0e9462bd"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3161,7 +3162,7 @@
         "id": "pS5LtSnKFf0e",
         "outputId": "8e420672-9af2-4bf7-ecc8-367fa5763900"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3191,7 +3192,7 @@
         "id": "4B6qR9svJ9q4",
         "outputId": "7f24d1da-2cc7-4bf1-bc66-bf33c75c0f7e"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3225,7 +3226,7 @@
         "id": "yjGFsKr_KNnh",
         "outputId": "1540e5be-3c44-4f61-e38f-f5aed63644ba"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3563,7 +3564,7 @@
         "id": "6wbylc0ImM8U",
         "outputId": "d2f4fbe0-90cb-423d-c042-0cd48b557390"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3633,7 +3634,7 @@
         "id": "uQjbmWe8nJ-P",
         "outputId": "2f32dc31-c767-4248-c8b1-d65f7236981e"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3679,7 +3680,7 @@
         "id": "8IrI_gX5nT5n",
         "outputId": "cb5204fc-53c7-4de6-a21e-89369fbb2f92"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3731,7 +3732,7 @@
         "id": "syM8GUI-p7w1",
         "outputId": "c4dec76b-4457-45d0-bf42-a3992e52fca0"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3770,7 +3771,7 @@
         "id": "V_X1x61dqNAx",
         "outputId": "54dd4f3d-7fcc-463c-fd98-e6e162d49394"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3829,7 +3830,7 @@
         "id": "yynjQ_Eqs4fY",
         "outputId": "aa747b1c-51bb-4185-a37d-0c620a75bbb0"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3842,6 +3843,126 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Poisson Model with 1 predictor Ghq12**"
+      ],
+      "metadata": {
+        "id": "FECA2OWVxLDL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import statsmodels.api as sm\n",
+        "\n",
+        "# Select predictor and target from the training set\n",
+        "X_train_pred = X_train[['Ghq12']]   # predictor\n",
+        "y_train_pred = y_train              # target\n",
+        "\n",
+        "# Add constant (intercept term)\n",
+        "X_train_pred = sm.add_constant(X_train_pred)\n",
+        "\n",
+        "# Fit Poisson regression model\n",
+        "poisson_model = sm.GLM(y_train_pred, X_train_pred,\n",
+        "                       family=sm.families.Poisson()).fit()\n",
+        "\n",
+        "# Print summary\n",
+        "print(poisson_model.summary())\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P3XFwC_0veA3",
+        "outputId": "49154c13-5cdd-4e2d-c83e-a393418363e8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                 Generalized Linear Model Regression Results                  \n",
+            "==============================================================================\n",
+            "Dep. Variable:                 Attack   No. Observations:                  120\n",
+            "Model:                            GLM   Df Residuals:                      118\n",
+            "Model Family:                 Poisson   Df Model:                            1\n",
+            "Link Function:                    Log   Scale:                          1.0000\n",
+            "Method:                          IRLS   Log-Likelihood:                -209.10\n",
+            "Date:                Fri, 29 Aug 2025   Deviance:                       145.13\n",
+            "Time:                        17:11:36   Pearson chi2:                     128.\n",
+            "No. Iterations:                     5   Pseudo R-squ. (CS):             0.5052\n",
+            "Covariance Type:            nonrobust                                         \n",
+            "==============================================================================\n",
+            "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+            "------------------------------------------------------------------------------\n",
+            "const         -0.2309      0.159     -1.451      0.147      -0.543       0.081\n",
+            "Ghq12          0.0595      0.007      8.599      0.000       0.046       0.073\n",
+            "==============================================================================\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Prepare the test predictor (only Ghq12)\n",
+        "X_test_pred = X_test[['Ghq12']]\n",
+        "X_test_pred = sm.add_constant(X_test_pred)  # add intercept\n",
+        "\n",
+        "# Predict using the trained model\n",
+        "y_test_pred = poisson_model.predict(X_test_pred)\n",
+        "\n",
+        "print(\"First 10 predicted values:\", y_test_pred[:10])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xzbip4AMvd4F",
+        "outputId": "5c5f786e-0035-41af-92a2-d081fdcdcff9"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "First 10 predicted values: 45     0.894113\n",
+            "48     1.277721\n",
+            "5      3.957377\n",
+            "56     3.728780\n",
+            "27     1.203914\n",
+            "65     1.134370\n",
+            "74     1.621058\n",
+            "11     1.825911\n",
+            "41     1.356053\n",
+            "108    1.007103\n",
+            "dtype: float64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "UJuT2b9Jvdmv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "L-e6QYgtvdXX"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
