--- a/homework1_3.ipynb
+++ b/homework1_3.ipynb
@@ -335,6 +335,7 @@
         }
       ],
       "source": [
+        "#Data preprocessing\n",
         "import pandas as pd\n",
         "df = pd.read_csv('/content/sample_data/asthma.csv', header=None)\n",
         "df.head()"
@@ -1511,7 +1512,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#EDA\n",
         "# Histogram for Ghq12\n",
         "plt.figure(figsize=(11,4))\n",
         "sns.histplot(new_df['Ghq12'], kde=True, bins=20, color='yellow')\n",
