--- a/homework1_3.ipynb
+++ b/homework1_3.ipynb
@@ -3675,7 +3675,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Quasi_Poisson model"
+        "**Quasi_Poisson model**"
       ],
       "metadata": {
         "id": "OjN90DpIHxkD"
