--- a/homework1_3.ipynb
+++ b/homework1_3.ipynb
@@ -335,6 +335,7 @@
         }
       ],
       "source": [
+        "#preprocessing data\n",
         "import pandas as pd\n",
         "df = pd.read_csv('/content/sample_data/asthma.csv', header=None)\n",
         "df.head()"
