--- a/homework1_3.ipynb
+++ b/homework1_3.ipynb
@@ -335,7 +335,6 @@
         }
       ],
       "source": [
-        "#preprocessing data\n",
         "import pandas as pd\n",
         "df = pd.read_csv('/content/sample_data/asthma.csv', header=None)\n",
         "df.head()"
@@ -1441,6 +1440,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#EDA part\n",
         "# Plot data types\n",
         "plt.figure(figsize=(2, 3))\n",
         "sns.barplot(x=dtype_counts.index.astype(str), y=dtype_counts.values)\n",
