--- a/homework1_3.ipynb
+++ b/homework1_3.ipynb
@@ -335,7 +335,6 @@
         }
       ],
       "source": [
-        "#data preprocessing\n",
         "import pandas as pd\n",
         "df = pd.read_csv('/content/sample_data/asthma.csv', header=None)\n",
         "df.head()"
@@ -1441,7 +1440,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#data visualization\n",
         "# Plot data types\n",
         "plt.figure(figsize=(2, 3))\n",
         "sns.barplot(x=dtype_counts.index.astype(str), y=dtype_counts.values)\n",
@@ -1509,6 +1507,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**EDA part**"
+      ],
+      "metadata": {
+        "id": "pXcHPM6GEqse"
+      }
     },
     {
       "cell_type": "code",
