--- a/homework1_3.ipynb
+++ b/homework1_3.ipynb
@@ -26,6 +26,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Data Preprocesing**"
+      ],
+      "metadata": {
+        "id": "iAVHpkrh94aX"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -335,6 +344,7 @@
         }
       ],
       "source": [
+        "\n",
         "import pandas as pd\n",
         "df = pd.read_csv('/content/sample_data/asthma.csv', header=None)\n",
         "df.head()"
@@ -1507,15 +1517,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**EDA part**"
-      ],
-      "metadata": {
-        "id": "pXcHPM6GEqse"
-      }
     },
     {
       "cell_type": "code",
