--- a/homework1_3.ipynb
+++ b/homework1_3.ipynb
@@ -26,6 +26,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Data Preprocessing**"
+      ],
+      "metadata": {
+        "id": "ZP_pMMyMv1hw"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
