--- a/homework1_3.ipynb
+++ b/homework1_3.ipynb
@@ -27,11 +27,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**Data Preprocessing**"
-      ],
+      "source": [],
       "metadata": {
-        "id": "ZP_pMMyMv1hw"
+        "id": "bs6zPT9ONyiL"
       }
     },
     {
@@ -1516,6 +1514,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**EDA part**"
+      ],
+      "metadata": {
+        "id": "POr7he_UOCv3"
+      }
     },
     {
       "cell_type": "code",
