--- a/homework1_3.ipynb
+++ b/homework1_3.ipynb
@@ -31,7 +31,7 @@
         "**Data Preprocessing**"
       ],
       "metadata": {
-        "id": "0o-deHQD1Ub4"
+        "id": "1SSk69uoFtcs"
       }
     },
     {
@@ -1516,6 +1516,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**EDA step**"
+      ],
+      "metadata": {
+        "id": "EmEqlgI2GR4W"
+      }
     },
     {
       "cell_type": "code",
