--- a/homework1_3.ipynb
+++ b/homework1_3.ipynb
@@ -26,15 +26,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "**Data Preprocessing**"
-      ],
-      "metadata": {
-        "id": "6CYfJYBp-YHK"
-      }
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1479,6 +1470,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**EDA part**"
+      ],
+      "metadata": {
+        "id": "qSWP1dMfYBXM"
+      }
     },
     {
       "cell_type": "code",
