--- a/homework1_3.ipynb
+++ b/homework1_3.ipynb
@@ -26,6 +26,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Data Preprocessing**"
+      ],
+      "metadata": {
+        "id": "5wWa0NO6RE58"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1470,15 +1479,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**EDA part**"
-      ],
-      "metadata": {
-        "id": "qSWP1dMfYBXM"
-      }
     },
     {
       "cell_type": "code",
