--- a/homework1_3.ipynb
+++ b/homework1_3.ipynb
@@ -28,10 +28,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Preprocessing Data**"
+        "**Data Preprocessing**"
       ],
       "metadata": {
-        "id": "iYAMdhLmi2CK"
+        "id": "rzJwtUhL_kBL"
       }
     },
     {
