--- a/homework1_3.ipynb
+++ b/homework1_3.ipynb
@@ -1509,6 +1509,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**EDA**"
+      ],
+      "metadata": {
+        "id": "sAgQ4lGGsH2z"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Histogram for Ghq12\n",
